--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,6 @@ Para essa prática usaremos dados públicos, que contem genótipos para SNPs aut
 IND<-read.table(file="Samples.fam",sep=" ", header=FALSE,na="NA")
 head(IND)
 dim(IND)
-unique(IND$V1)
 ```
 
 - Qual o número de SNPs
@@ -53,13 +52,16 @@ POPINFO=read.table(file="Population_Sample_Info.txt",header=TRUE)
 table(POPINFO$Population)
 ```
 
-Análise para verificar estruturação populacional
+Como é possível identificar estruturação populacional
 ================================================
 
-Vamos iniciar a análise de estrutura populacional explorando com PCA.
+Vamos iniciar a análise de estrutura populacional explorando com PCA (Análise de componente Principal - Principal Component Analyses).
 
 
-Primeiro é necessário converter os arquivos para o formato gds. O formato gds é um formato criado para o uso do pacote de R SNPRELATE. Esse formato visa organizar os dados de modo a otimizar o tempo de excecução das análises.
+A abordagem de PCA é amplamente utilizada no campo da genômica populacional para inferir estruturação populacional a partir de dados genômicos em larga escala. O PCA irá sumarizar a variação genômica observada entre os individuos. Quanto maior o número de diferenças genéticas entre indivíduos, mais distante eles estarão no PCA. Por outro lado quanto maior for o compartilhamento de variantes genéticas mais próximos os indivíduos estarão.
+
+
+Para realizar a análise de PCA, primeiro é necessário converter os arquivos para o formato gds. O formato gds é um formato criado para o uso do pacote de R SNPRELATE. Esse formato visa organizar os dados genômicos de modo a otimizar o tempo de excecução das análises.
 ```{r}
 bedfile<-"Samples.bed" 
 famfile<-"Samples.fam" 
@@ -94,8 +96,8 @@ tab <- data.frame(sample.id = pca$sample.id,
 head(tab)
 
 
-plot(tab$EV2, tab$EV1, col=as.integer(tab$pop), xlab="eigenvector 2", ylab="eigenvector 1", main="PCA using all SNPs")
-legend("topleft", legend=levels(tab$pop), pch="o", col=1:(nlevels(tab$pop)))
+plot(tab$EV2, tab$EV1, col=rainbow(5)[as.integer(tab$pop)], xlab="eigenvector 2", ylab="eigenvector 1", main="PCA")
+legend("topleft", legend=levels(tab$pop), pch="o", col=rainbow(5)[1:(nlevels(tab$pop))], cex=0.4, pt.cex = 0.5)
 ```
 
 
@@ -104,15 +106,69 @@ legend("topleft", legend=levels(tab$pop), pch="o", col=1:(nlevels(tab$pop)))
 pc.percent <- pca$varprop*100
 head(round(pc.percent, 2))
 lbls <- paste("PC", 1:4, "\n", format(pc.percent[1:4], digits=2), "%", sep="")
-pairs(pca$eigenvect[,1:4], col=tab$pop, labels=lbls)
+pairs(pca$eigenvect[,1:4], col=rainbow(5)[tab$pop], labels=lbls)
 ```
+
+- É possível usar apenas um subconjuntosd dos SNPs para estimar os PCs?
+
+Vamos fazer um filtro excluíndo SNPs em desequilíbrio de ligação.
+
+```{r}
+snpset <- snpgdsLDpruning(genofile, ld.threshold=0.2)
+snpset.id <- unlist(snpset)
+```
+
+Agora, vamos estimar o PCA usando apenas esse subconjunto de SNPS.
+
+```{r}
+pca2 <- snpgdsPCA(genofile, snp.id=snpset.id)
+
+tab2 <- data.frame(sample.id = pca2$sample.id,
+                   pop = factor(population)[match(pca2$sample.id, sample.id)],
+                   EV1 = pca2$eigenvect[,1],    # the first eigenvector
+                   EV2 = pca2$eigenvect[,2],    # the second eigenvector
+                   stringsAsFactors = FALSE)
+head(tab2)
+
+
+plot(tab2$EV2, tab2$EV1, col=rainbow(5)[as.integer(tab2$pop)], xlab="PC2", ylab="PC1", main="PCA")
+legend("bottomleft", legend=levels(tab2$pop), pch="o", col=rainbow(5)[1:(nlevels(tab2$pop))], cex=0.7, pt.cex = 0.7)
+
+```
+
 
 Em nossa amostra, temos duas populações do continente Americanos que foram formadas pelo processo de miscigenação: Afro-Americanas e Mexicanas.
 
 Quais os componentes de ancestralidade de cada uma dessas populações?
 
+-# Vamos, com base nas análises de PCA estimar a proporção de componente de ancestralidade Africano e Europeu nos indivíduos Afro-Americanos (ASW)
+```{r}
+avgYRI <-mean(pca2$eigenvect[population=="YRI",2])
+avgCEU <-mean(pca2$eigenvect[population=="CEU",2])
+ASWadmix<-(pca2$eigenvect[population=="ASW",2]-avgCEU)/(avgYRI-avgCEU)
 
-- Vamos, com base nas análises de PCA estimar a proporção de componente de ancestralidade Nativo Americano e Europeu nos indivíduos Mexicanos.
+## Ancestralidade média
+AFR_anc<-mean(ASWadmix)
+AFR_anc
+EUR_anc<-1-AFR_anc
+EUR_anc
+```
+
+- Vamos visualizar as estimativas de ancestralidade individuais num gráfico de barras
+```{r}
+tab<-cbind(ASWadmix,1-ASWadmix)
+myorder<-order(ASWadmix)
+temp<-t(as.matrix(tab[myorder,]))
+
+# Visualização Grafica
+barplot(temp, col=c("purple","yellow"), xlab="Individual ", ylab="Ancestry", border=NA, axisnames=FALSE, main="Ancestry of ASW",ylim=c(0,1), xpd = FALSE)
+legend("bottomright", c("African","European"), lwd=4, col=c("purple","yellow"), bg="white",cex=0.85)
+
+
+```
+
+
+- Vamos repetir as análises, agora para estimar a proporção de componente de ancestralidade Nativo Americano e Europeu nos indivíduos Mexicanos (MXL).
 ```{r}
 avgCEU2=mean(pca2$eigenvect[population=="CEU",2])
 avgNAM2=mean(pca2$eigenvect[population=="NAM",2])
